<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">
    <TextView
            android:text="@string/empty"
            android:layout_width="90dp"
            android:layout_height="100dp"
            android:id="@+id/car1_text" app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintEnd_toStartOf="@+id/car2_text" android:layout_marginEnd="8dp"
            app:layout_constraintHorizontal_bias="24" style="@style/whiteBox"
            android:textSize="24dp" android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
            android:background="#00ff00"/>
    <TextView
            android:text="@string/empty"
            android:layout_width="90dp"
            android:layout_height="100dp"
            android:id="@+id/car2_text" app:layout_constraintStart_toEndOf="@+id/car1_text"
            app:layout_constraintHorizontal_bias="24" app:layout_constraintEnd_toStartOf="@+id/car3_text"
            style="@style/whiteBox"
            android:textSize="24dp" android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
            android:background="#00ff00"/>
    <TextView
            android:text="@string/empty"
            android:layout_width="90dp"
            android:layout_height="100dp"
            android:id="@+id/car3_text" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintStart_toEndOf="@+id/car2_text" android:layout_marginStart="8dp"
            app:layout_constraintHorizontal_bias="24" style="@style/whiteBox"
            android:textSize="24dp" android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
            android:background="#00ff00"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/number"
            android:hint="@string/what_is_your_number" android:textAlignment="center"
            app:layout_constraintBottom_toTopOf="@+id/name"
            app:layout_constraintTop_toBottomOf="@+id/car2_text" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/name"
            android:hint="@string/what_is_your_name" android:textAlignment="center"
            app:layout_constraintTop_toBottomOf="@+id/number" app:layout_constraintBottom_toTopOf="@+id/car"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/car"
            android:hint="@string/what_is_your_car" android:textAlignment="center"
            app:layout_constraintTop_toBottomOf="@+id/name"
            app:layout_constraintBottom_toTopOf="@+id/ok" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"/>
    <Button
            android:text="@string/ok"
            android:layout_width="88dp"
            android:layout_height="40dp"
            android:id="@+id/ok" app:layout_constraintStart_toEndOf="@+id/cancel"
            app:layout_constraintTop_toBottomOf="@+id/car"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"/>
    <Button
            android:text="@string/cancel"
            android:layout_width="88dp"
            android:layout_height="40dp"
            android:id="@+id/cancel"
            app:layout_constraintEnd_toStartOf="@+id/ok"
            app:layout_constraintTop_toBottomOf="@+id/car"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>